--- a/App Owns Data/PowerBIEmbedded_AppOwnsData/Web.config
+++ b/App Owns Data/PowerBIEmbedded_AppOwnsData/Web.config
@@ -24,10 +24,10 @@
           - For authentication with app secret choose ServicePrincipal as AuthenticationType (Preview).
             More details here: https://docs.microsoft.com/en-us/power-bi/developer/embed-service-principal
         -->
-    <add key="AuthenticationType" value="MasterUser"/>
+    <add key="AuthenticationType" value="ServicePrincipal"/>
     <!-- Common configuration properties for both authentication types -->
-    <add key="applicationId" value=""/>
-    <add key="workspaceId" value=""/>
+    <add key="applicationId" value="0fc4f3d9-2672-4940-9f01-21425ea5c589"/>
+    <add key="workspaceId" value="68de523c-99bd-4719-a95e-f6b1f7020824"/>
     <!-- The id of the report to embed. If empty, will use the first report in group -->
     <add key="reportId" value=""/>
 
